fixing on mobiles

--- a/mainapp/static/css/foodtrade.less
+++ b/mainapp/static/css/foodtrade.less
@@ -781,12 +781,12 @@ td.ellipsis
 }
 
 #searchGroup .hidden-xs {
-    // display: inline-block !important;
+    display: inline-block !important;
 }
 
 @media (max-width: 767px) {
 #searchGroup .hidden-xs {
-  // display: none!important;
+  display: none!important;
  }
 }
 
